# ps-other-services

ps-repo-manager/: .pre-commit-hooks.yaml  Makefile  README.md  merge..pre-commit-config.yaml  merge.pyproject.toml  pyproject.toml
ps-repo-manager-configs/: .editorconfig  .git-blame-ignore-revs  .pre-commit-config.yaml  Makefile  README.md  config.yml
ps-repo-manager-configs/profiles/python/: merge..pre-commit-config.yaml  pyproject.toml  repomanager.yml
ps-repo-manager/.github/workflows/: publish-python-library-poetry.yml  version.yml
ps-repo-manager/.repomanager/: config.yml
ps-repo-manager/.repomanager/state/: state.yml
ps-repo-manager/.repomanager/state/configs/: .pre-commit-config.yaml  setup.cfg
ps-repo-manager/.repomanager/state/configs/.github/workflows/: parralel-pr-tests.yml  pr.yml  pre-commit.yml
ps-repo-manager/.repomanager/state/configs/make/: python_lib_repo_read.mk
ps-repo-manager/infra/docker/: docker-compose.tests.yml  tests.Dockerfile
ps-repo-manager/repomanager/: cli.py  commands.py  configmerger.py  configrepo.py  constants.py  exceptions.py  localfiles.py  repomanagerconfig.py  statemanager.py  utils.py
ps-repo-manager/repomanager/tests/: conftest.py  noxfile.py  test_cli.py  test_commands.py  test_config_repo.py  test_local_files.py  test_repo_manager_config.py  test_tui.py  test_utils.py
ps-repo-manager/repomanager/tui/: __init__.py  profile_selection_textual.css  profileselectiontextualapp.py  profilestate.py  widgets.py
screening-api/: .bumpversion.cfg  .gitignore  MANIFEST.in  METADATA  Makefile  README.rst  dependency_links.txt  docker-compose.override.yml  docker-compose.test.yml  docker-compose.testenv.yml  docker-compose.yml  requirements.txt  requirements_dev.txt  setup.py
screening-workers/: .bumpversion.cfg  .env  .gitignore  CONTRIBUTING.md  MANIFEST.in  METADATA  Makefile  README.rst  docker-compose.override.yml  docker-compose.production.yml  docker-compose.test.yml  docker-compose.yml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py
sis-api/: .bumpversion.cfg  (+16 more)
(+549 files in other folders)
