[[tool.poetry.source]]
name = "ps-python"
url = "https://polestar-tools-324252367609.d.codeartifact.us-east-1.amazonaws.com/pypi/ps-python/simple/"
secondary = true

[tool.isort]
profile = "black"
src_paths = ['.'] # FIXME needs template
line_length = 100

[tool.black]
line-length = 100
target-version = ['py36', 'py37', 'py38']

#[tool.coverage.report]
#fail_under=95
#omit = [
#    "*tests*",
#    "*.venv/*",
#    "*.nox/*",
#    ]
